<resources>
    <string name="app_name">Slagalica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podaci_korisnika">Podaci</string>
    <string name="slika_korisnika">Slika</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="email">Email</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="lozinka">Lozinka</string>


</resources>