<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/podaci_korisnika"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profilna"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/slika_korisnika" />


            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ime"
                android:minHeight="48dp"
                android:text="Pera"
               />

            <EditText
                android:id="@+id/editLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prezime"
                android:minHeight="48dp"
                android:text="Peric" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text="pera@gmail.com" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/korisnicko_ime"
                android:minHeight="48dp"
                android:text="peraperic" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lozinka"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="pera123" />


            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Izmeni" />



        </LinearLayout>

    </ScrollView>

</RelativeLayout>
